kubernetes/api.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      # imagePullSecrets:
      #   - name: regcred
      containers:
      - name: api
        image: lcrown/hpc-cmdb-api:latest
        ports:
          - containerPort: 8000
            name: api
