kubernetes/app.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      # imagePullSecrets:
      #   - name: regcred
      containers:
      - name: app
        image: lcrown/hpc-cmdb-app:latest
        ports:
          - containerPort: 3000
            name: app
