kubernetes/db.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      volumes:
        - name: db-pv
          persistentVolumeClaim:
            claimName: db-pvc
      containers:
      - name: db
        image: lcrown/hpc-cmdb-db:latest
        ports:
          - containerPort: 5432
            name: postgres
        volumeMounts:
          - mountPath: /var/lib/postgresql/data/pgdata
            name: db-pv
