kubernetes/api.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: api
