kubernetes/app.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: app
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: app
